adding responsive basics

--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css"
+        integrity="sha512-HXXR0l2yMwHDrDyxJbrMD9eLvPe3z3qL3PPeozNTsiHJEENxx8DH2CxmV05iwG0dwoz5n4gQZQyYLUNt1Wdgfg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Blog Template</title>
+    <script>
+        const myFunction = () => {
+            let x = document.getElementById('menu-items');
+            console.log(x.className);
+            if(x.className.includes('show')){
+                x.className = 'mobile-menu-items'
+            } else {
+                x.className += ' show'
+            }
+        }
+    </script>
 </head>
+
 <body>
     <header>
         <h1>Our Blog Template</h1>
@@ -16,23 +32,41 @@
         <a href="#">Link 3</a>
         <a href="#">Link 4</a>
     </nav>
+    <div class="mobile-menu" >
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="ri-menu-line"></i>
+        </a>
+
+        <div class="mobile-menu-items" id="menu-items">
+            <a href="#">Link 1</a>
+            <a href="#">Link 2</a>
+            <a href="#">Link 3</a>
+            <a href="#">Link 4</a>
+        </div>
+    </div>
     <div class="content">
         <main>
             <h1>Blog Post 1</h1>
             <span>01.01.2023</span>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nisi delectus iusto voluptas. Saepe sequi optio excepturi doloribus quis? Nisi ducimus velit ex debitis dolores maiores nam veniam nemo nostrum?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nisi delectus iusto voluptas. Saepe sequi
+                optio excepturi doloribus quis? Nisi ducimus velit ex debitis dolores maiores nam veniam nemo nostrum?
+            </p>
             <h1>Blog Post 2</h1>
             <span>01.02.2023</span>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora voluptas alias aut error. Molestiae illo quis, voluptas provident modi magni praesentium maxime quisquam mollitia illum ad. Fugiat dolorum quod a!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora voluptas alias aut error. Molestiae
+                illo quis, voluptas provident modi magni praesentium maxime quisquam mollitia illum ad. Fugiat dolorum
+                quod a!</p>
         </main>
         <aside>
             <h1>Sidebar</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla sequi temporibus a. Qui molestiae at quos similique assumenda vitae quod! Inventore porro quo beatae ea quos odit neque velit tenetur.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla sequi temporibus a. Qui molestiae at quos
+                similique assumenda vitae quod! Inventore porro quo beatae ea quos odit neque velit tenetur.</p>
         </aside>
     </div>
     <footer>
         <p>Copyright 2023</p>
     </footer>
-    
+
 </body>
+
 </html>
